--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -31,3 +31,95 @@ body {
     text-align: center;
 }
 
+.landing-container {
+    background: #1CB0F6 url('clouds.png') repeat 0 0;
+	-webkit-animation: 50s linear 0s normal none infinite animate;
+	-moz-animation: 50s linear 0s normal none infinite animate;
+	-ms-animation: 50s linear 0s normal none infinite animate;
+	-o-animation: 50s linear 0s normal none infinite animate;
+	animation: 50s linear 0s normal none infinite animate;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+@-webkit-keyframes animate {
+	from {background-position:0 0;}
+	to {background-position: -1366px 0;}
+}
+ 
+@-moz-keyframes animate {
+	from {background-position:0 0;}
+	to {background-position: -1366px 0;}
+}
+ 
+@-ms-keyframes animate {
+	from {background-position:0 0;}
+	to {background-position: -1366px 0;}
+}
+ 
+@-o-keyframes animate {
+	from {background-position:0 0;}
+	to {background-position: -1366px 0;}
+}
+ 
+@keyframes animate {
+	from {background-position:0 0;}
+	to {background-position: -1366px 0;}
+}
+
+.landing-inner {
+    height: 80vh;
+    width: 80vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around; 
+    text-align: center;
+}
+
+.landing-inner h1 {
+    color: #FFFFFF;
+    font-family: 'Comfortaa', cursive;
+    font-weight: bold;
+    text-shadow: 2px 0 #FFFFFF;
+    width: 80vw;
+    font-size: 50px;
+}
+
+.landing-inner p {
+    font-family: 'Varela Round', sans-serif;
+    color: #FFFFFF;
+    width: 80vw;
+    font-size: 20px;
+}
+
+.new-user {
+    color: #1CB0F6;
+    background-color: #FFFFFF;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 3px;
+    width: 80vw;
+    box-shadow: 0px 3px 1px #178ec6;
+}
+
+.new-user a {
+    color: #1CB0F6;
+    text-decoration: none;
+    font-family: 'Varela Round', sans-serif;
+    font-weight: bold; 
+    font-size: 20px;
+}
+
+.old-user a {
+    color: #FFFFFF;
+    text-decoration: none;
+    font-family: 'Varela Round', sans-serif;
+    font-weight: bold; 
+    font-size: 20px;
+}
+
